<resources>
    <string name="app_name">Personal-Condition-Tracker</string>
    <string name="loginTitle">Login/Sign up</string>
    <string name="userIDTitle">User ID:</string>
    <string name="userIDText">Enter your user ID</string>
    <string name="passwordTitle">Password:</string>
    <string name="passwordText">Enter your password</string>
    <string name="signInButtonText">Sign In</string>
    <string name="signUpButtonText">Sign Up</string>
    <string name="title_activity_view_record">ViewRecordActivity</string>
    <string name="confirmButtonText">Confirm</string>
    <string name="cancelButtonText">Cancel</string>

    <string name="recordTitleText">Title</string>
    <string name="recordDateText">Date</string>
    <string name="recordDescriptionText">Description</string>
    <string name="viewGeoLocationButtonText">View Geo-Location</string>
    <string name="viewGeoLocationsButtonText">View Geo-Locations</string>
    <string name="viewBodyLocationButtonText">View Body-Location</string>
    <string name="viewBodyLocationsButtonText">View Body-Locations</string>
    <string name="modifyGeoLocationButtonText">View or change Geo-Location</string>
    <string name="recordPhotoText">Photos</string>
    <string name="title_activity_view_record_list">ViewRecordListActivity</string>
    <string name="viewRecordsForConditionText">Records</string>
    <string name="viewConditionsText">Conditions</string>
    <string name="addARecordButtonText">Add a Record</string>
    <string name="addAConditionButtonText">Add a Condition</string>
    <string name="viewMapOfRecordsButtonText">View map of records</string>
    <string name="searchConditionsButtonText">Search conditions</string>
    <string name="viewCommentsButtonText">View Comments</string>
    <string name="showSlideShowButtonText">Show Slideshow</string>
    <string name="frontOfBodyButtonText">Front</string>
    <string name="backOfBodyButtonText">Backside</string>
    <string name="addAPatientText">Add a patient by UserID</string>
    <string name="assignedPatientsText">Assigned Patients</string>
    <string name="addAPatientButtonText">Add a New Patient</string>
    <string name="viewCommentsText">Comments</string>
    <string name="addACommentButtonText">Add a Comment</string>
    <string name="createAccountText">Create your Account</string>
    <string name="emailAddressText">Email Address</string>
    <string name="phoneNumberText">Phone Number</string>
    <string name="passwordHeaderText">Password</string>
    <string name="addPhotoButtonText">Add Photo</string>
    <string name="selectGeoLocationText">Select a Geo-Location on the map:</string>
    <string name="results">Results:</string>
    <string name="searchByKeyword">Search By Keyword:</string>
    <string name="searchByGeoLocation">Search By Geo-Location:</string>
    <string name="searchByBodyLocation">Search By Body-Location:</string>
    <string name="searchRecordsButtonText">Search Records</string>
    <string name="viewBodyLocationsText">Body Locations:</string>
    <string name="addABodyLocationButtonText">Add a Body Location</string>


    <string name="title_activity_view_condition_list">ViewConditionListActivity</string>
    <string name="title_activity_select_geo_location">SelectGeoLocationActivity</string>
    <string name="title_activity_select_body_location">SelectBodyLocationActivity</string>
    <string name="title_activity_view_map_of_records">ViewMapOfRecordsActivity</string>
    <string name="title_activity_view_comments">ViewCommentsActivity</string>
    <string name="title_activity_modify_condition">ModifyConditionActivity</string>
    <string name="title_activity_view_patient_list">ViewPatientListActivity</string>
    <string name="title_activity_add_patient">AddPatientActivity</string>
    <string name="title_activity_add_comment">AddCommentActivity</string>
    <string name="title_activity_modify_user_account">ModifyUserAccount</string>
    <string name="title_activity_maps">Map</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="submit">Submit</string>
    <string name="title_activity_view_condition_list_as_care_provider" />
    <string name="title_activity_view_record_list_as_care_provider">ViewRecordListAsCareProviderActivity</string>

    <string-array name="account_types_array">
        <item>Patient</item>
        <item>Care Provider</item>
    </string-array>

    <string-array name="front_or_back_array">
        <item>Front</item>
        <item>Back</item>
    </string-array>
    <string name="frontOrBack">Select body side:</string>

    <string-array name="body_part_type_array">
        <item>Head</item>
        <item>Chest</item>
        <item>Left Arm</item>
        <item>Right Arm</item>
        <item>Left Leg</item>
        <item>Right Leg</item>
    </string-array>
    <string name="bodyPartType">Select a body part type:</string>
    <string name="selectBodyLocationButtonText">Select a Body-Location</string>

    <string name="title_activity_select_body_location_male">selectBodyLocationMale</string>
    <string name="select_a_location_on_the_body_below">Select a location on the body below</string>

    <string name="title_activity_take_photo_with_camera">TakePhotoWithCameraActivity</string>
    <string name="title_activity_search_records">SearchRecordsActivity</string>
    <string name="title_activity_view_body_location_list">ViewBodyLocationListActivity</string>
    <string name="title_activity_modify_body_location">ModifyBodyLocationActivity</string>
    <string name="title_activity_slideshow">SlideshowActivity</string>


</resources>
