<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyRecordActivity"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/modifyRecordCancelButton"
        android:layout_width="136dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/cancelButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPhotosView" />

    <Button
        android:id="@+id/viewBodyLocationsButton"
        android:layout_width="335dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/viewBodyLocationsButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewGeoLocationsButton" />

    <TextView
        android:id="@+id/patientNameTextView"
        android:layout_width="82dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/recordTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/recordTitleView"
        android:layout_width="330dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textAutoCorrect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordDateTextView" />

    <TextView
        android:id="@+id/recordDateTextView"
        android:layout_width="79dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/recordDateText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordDateView" />

    <EditText
        android:id="@+id/recordDateView"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="14dp"
        android:inputType="datetime|date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientNameTextView" />

    <TextView
        android:id="@+id/recordDescriptionTextView"
        android:layout_width="78dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/recordDescriptionText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordTitleView" />

    <EditText
        android:id="@+id/recordDescriptionView"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textAutoCorrect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordDescriptionTextView" />

    <Button
        android:id="@+id/viewGeoLocationsButton"
        android:layout_width="333dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/viewGeoLocationsButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordDescriptionView" />

    <TextView
        android:id="@+id/viewPhotosTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/recordPhotoText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewBodyLocationsButton" />

    <ScrollView
        android:id="@+id/viewPhotosView"
        android:layout_width="339dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPhotosTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/modifyRecordConfirmButton"
        android:layout_width="138dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/confirmButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPhotosView" />
</android.support.constraint.ConstraintLayout>