<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCommentActivity">

    <Button
        android:id="@+id/commentCancelButton"
        android:layout_width="136dp"
        android:layout_height="43dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/cancelButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CommentText" />

    <Button
        android:id="@+id/submitCommentButton"
        android:layout_width="136dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CommentText" />

    <EditText
        android:id="@+id/CommentText"
        android:layout_width="343dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:inputType="textAutoComplete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CommentHeaderText" />

    <TextView
        android:id="@+id/CommentHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/viewCommentsText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>