<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddPatientActivity">

    <TextView
        android:id="@+id/addPatientHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/addAPatientText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addPatientText"
        android:layout_width="343dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:inputType="textAutoComplete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPatientHeaderText" />

    <Button
        android:id="@+id/addPatientConfirmButton"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:onClick="addPatientConfirm"
        android:text="@string/confirmButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPatientText" />

    <Button
        android:id="@+id/addPatientCancelButton"
        android:layout_width="136dp"
        android:layout_height="43dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="32dp"
        android:onClick="addPatientCancel"
        android:text="@string/cancelButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPatientText" />
</android.support.constraint.ConstraintLayout>