<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ViewRecordActivity">

    <ScrollView
        android:id="@+id/viewPhotos"
        android:layout_width="339dp"
        android:layout_height="59dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPhotosTextView2"
        app:layout_constraintVertical_bias="0.0">

    </ScrollView>

    <TextView
        android:id="@+id/viewPhotosTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/recordPhotoText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewBodyLocButton" />

    <Button
        android:id="@+id/viewBodyLocButton"
        android:layout_width="335dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="viewBodyLocations"
        android:text="@string/viewBodyLocationButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewGeoLocButton" />

    <Button
        android:id="@+id/viewGeoLocButton"
        android:layout_width="333dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="viewGeoLocation"
        android:text="@string/viewGeoLocationButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordDescriptionView2" />

    <TextView
        android:id="@+id/recordDescriptionView2"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:inputType="textAutoCorrect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordDescription_TextView" />

    <TextView
        android:id="@+id/recordDate_textView"
        android:layout_width="79dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewRecordTitle" />

    <TextView
        android:id="@+id/recordDate2View"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:inputType="datetime|date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordDate_textView" />

    <TextView
        android:id="@+id/recordDescription_TextView"
        android:layout_width="78dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordDate2View" />

    <TextView
        android:id="@+id/conditionRecordTitle_textView"
        android:layout_width="82dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewRecordTitle"
        android:layout_width="330dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:inputType="textAutoCorrect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conditionRecordTitle_textView" />
</android.support.constraint.ConstraintLayout>